--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -1188,325 +1188,431 @@ p {
   
 /*---------------------------------STYLE.CSS------------------------------------------*/
 .deals-offers-container {
-    padding: 0 20px 20px 20px;
+  padding: 0 20px 20px 20px; /*changes*/
 }
 
 .immersive__wrapper-light {
-    color: #18171A;
-    background-color: white;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding-top: 48px;
+  color: #18171A;
+  background-color: white;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-top: 48px;
 
-    @media(min-width: 1024px) {
-        text-align: center;
-    }
+  @media(min-width: 1024px) {
+      display: inherit;
+      text-align: center;  /*changes*/
+  }
 }
 
 .immersive__wrapper-light .immersive__content {
-    order: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  order: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
 
-    @media(min-width: 1024px) {
-        top: 110px;
-        left: 64px;
-        text-align: left;
-    }
+  @media(min-width: 1024px) {
+      top: 110px;
+      left: 64px;
+      text-align: left;
+  } 
 }
+.heading-content{
+  @media(min-width: 1024px) {
+      display: flex;
+      align-items: flex-end;
+      text-align: left;
+  }
+} /*changes*/
 
 .immersive__wrapper-light .immersive__content h2 {
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 40px;
-    letter-spacing: 0.64px;
-    margin: 0;
-    max-width: 300px;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0.64px;
+  margin: 0;
+  max-width: 300px;
 
-    @media(min-width: 1024px) {
-        margin: 0;
-        margin-bottom: 48px;
-        font-size: 64px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 72px;
-        max-width: 640px;
-        letter-spacing: 1.28px;
-    }
+  @media(min-width: 1024px) {
+      margin: 0;
+      font-size: 64px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 72px;
+      max-width: 640px;
+      letter-spacing: 1.28px;
+  }
 }
 
 .immersive__wrapper-light .immersive__content p {
-    color: var(--Primary-Main, #18171A);
-    font-family: "Fira Sans";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    margin-top: 48px;
-    margin-bottom: 48px;
-    max-width: 236px;
-    display: block;
+  color: var(--Primary-Main, #18171A);
+  font-family: "Fira Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  margin-top: 48px;
+  margin-bottom: 48px;
+  max-width: 236px;
+  display: block;
 
-    @media(min-width:1024px) {
-        margin-top: 12px;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 24px;
-        margin-bottom: 0;
-        max-width: 280px;        
-    }
+  @media(min-width:1024px) {
+      margin-top: 12px;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 24px;
+      margin-bottom: 0;
+      max-width: 280px;        
+  }
 }
 
 .immersive__wrapper-light .sub-container .immersive__content p {
-    color: inherit;
-    font-family: "Fira Sans";
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    
-    line-height: 20px;
-    margin-top: 16px;
-    margin-bottom: 24px;
-    max-width: 236px;
-    display: block;
+  color: inherit;
+  font-family: "Fira Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  
+  line-height: 20px;
+  margin-top: 16px;
+  margin-bottom: 24px;
+  max-width: 236px;
+  display: block;
 
-    @media(min-width:1024px) {
-        margin-top: 12px;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 24px;
-        margin-bottom: 0;
-        max-width: 280px;        
-    }
+  @media(min-width:1024px) {
+      margin-top: 12px;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 24px;
+      margin-bottom: 0;
+      max-width: 280px;        
+  }
 }
 
 .immersive__wrapper .immersive__content p strong {
-    margin: 0;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 32px;
-    display: block;
+  margin: 0;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  display: block;
 
-    @media (min-width:1024px) {
-        margin-top: 72px;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 20px;
-    }
-   
+  @media (min-width:1024px) {
+      margin-top: 72px;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+  }
+ 
 }
 
 .immersive__wrapper .immersive__content .immersive__action {
-    margin-top: 24px;
+  margin-top: 24px;
 }
 
 .immersive__wrapper-light .sub-container .immersive__content .immersive__action a {
-    display: flex;
-    padding: 8px 12px;
-    background-color: #ffffff;
-    justify-content: center;
-    align-items: center;
-    align-self: stretch;
-    border: none;
-    font-size: 16px;
-    color: #18171A;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    border-radius: unset;
-    text-decoration: none;
+  display: flex;
+  padding: 8px 12px;
+  background-color: #ffffff;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border: none;
+  font-size: 16px;
+  color: #18171A;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  border-radius: unset;
+  text-decoration: none;
 
-    @media(min-width: 1024){
-        font-size: 18px;
-        padding: 8px 18px 8px 20px;
-        margin: 0;
-    }
-    
+  @media(min-width: 1024){
+      font-size: 18px;
+      padding: 8px 18px 8px 20px;
+      margin: 0;
+  }
+  
 }
 
 .immersive__wrapper-light .immersive__action-btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 24px;
-    order: 3;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 24px;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 100%;
+
+  @media (min-width:1024px) {
+      position: absolute;
+      right: 0;
+      top: auto;
+      left: auto;
+  }
+}    /*changes*/
 
 .immersive__wrapper-light .immersive__action {
-    display: inline-flex;
-    align-items: center;
-    margin-top: 24px;
+  display: inline-flex;
+  align-items: center;
+  margin-top: 24px;
+
+  @media (min-width: 1024) {
+      position: absolute;        
+  }
 }
 
 .immersive__wrapper-light .sub-container {
-    order: 2;
-    display: flex;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    
-    @media(min-width: 1024) {
-        /* grid-auto-columns: 50% 50%; */
-        /* display: grid;
-        grid-template-columns: 1fr 1fr; */
-        
-    }
+  order: 2;
+  display: flex;
 }
+
+@media (min-width: 1024px) {
+  .immersive__wrapper-light .sub-container {
+      order: 2;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 24px;
+      margin-top: 48px;
+  }
+} /*changes*/
+
 
 .immersive__wrapper-light .sub-container .left-container {
-    display: none;
+  display: none;
 
-    @media(min-width: 1024px) {
-        display: flex;
-        position: relative;
-    }
+  @media(min-width: 1024px) {
+      display: flex;
+      position: relative;
+  }
 }
 .immersive__wrapper-light .sub-container .left-container img {
-    position: relative;
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    gap: 20px;
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  gap: 20px;
 }
 
+.immersive__wrapper-light .sub-container .left-container .teaser__description{
+  font-size: 12px;
+}
+
+.immersive__wrapper-light .sub-container .left-container .teaser__action-btn{
+  position: absolute;
+  right: 0;
+  bottom: 5%;
+} /*newly added*/
+
+.immersive__wrapper-light .sub-container .left-container .teaser__action-btn a{
+      display: flex;
+      padding: 8px 12px;
+      background-color: #ffffff;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      font-size: 16px;
+      color: #18171A;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      border-radius: unset;
+      text-decoration: none;
+  
+      @media(min-width: 1024){
+          font-size: 18px;
+          padding: 8px 18px 8px 20px;
+          margin: 0;
+      }
+}/*newly added*/
+
 .immersive__wrapper-light .sub-container .right-container {
-    position: relative;
-    display: block;
+  position: relative;
+  display: block;
 }
 
 .immersive__wrapper-light .sub-container .right-container .right-container-subcontainer {
-    display: flex;
-    align-items: flex-end;
-    gap: 16px;
-    /* width: 320px;
-height: 204px; */
+  /* display: flex;
+  align-items: flex-end; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  width: 100%; /*check*/
+}/*changes*/
+
+.img-over-text{
+  @media (min-width: 1024){
+      padding: 32px 0 0 16px;
+  }
+  
 }
 
 .immersive__wrapper-light .sub-container .right-container .right-container__content {
-    position: absolute;
-    left: 5%;
-    top: 2px;
-    gap: 24px;
-    color: white;
-    /* @media (min-width:1024px) {
-
-        
-    } */
+  position: absolute;
+  left: 5%;
+  top: 2px;
+  gap: 24px;
+  color: white;
+  z-index: 1;
 }
 
 .immersive__wrapper-light .sub-container .right-container .right-container__card-1 img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    clip-path: polygon(100% 0, 100% 44%, 100% 90%, 59% 91%, 52% 100%, 0 100%, 0 0);
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  clip-path: polygon(100% 0, 100% 44%, 100% 90%, 59% 91%, 52% 100%, 0 100%, 0 0);
 }
 
+.immersive__wrapper-light .sub-container .right-container .right-container__card-1 picture::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 99%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  z-index: 1; 
+  /* Ensure the gradient is above the image */
+  pointer-events: none; /* Ensure the gradient doesn't block interactions */
+} /*newly added */
+
 .immersive__wrapper-light .sub-container .right-container .right-container__card-1{
-    position: relative;
+  position: relative;
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card {
-    backdrop-filter: blur(20px);
-    padding: 16px;
-    text-align: left;
+  backdrop-filter: blur(20px);
+  padding: 16px;
+  text-align: left;
 
-    @media(min-width: 1024px) {
-        padding: 32px 32px 55px;
-    }
+  @media(min-width: 1024px) {
+      padding: 32px 32px 55px;
+  }
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-light {
-    background: var(--Gradients-Gradient-2, linear-gradient(225deg, #B3C4C7 -4.54%, #DAC8C6 115.1%));
-    color: #18171A;
-    clip-path: polygon(0 7%, 100% 7%, 100% 100%, 0% 100%);
+  background: var(--Gradients-Gradient-2, linear-gradient(225deg, #B3C4C7 -4.54%, #DAC8C6 115.1%));
+  color: #18171A;
+  clip-path: polygon(0 7%, 100% 7%, 100% 100%, 0% 100%);
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark {
-    background: var(--Primary-Main, #18171A);
-    color: white;
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0);
+  background: var(--Primary-Main, #18171A);
+  color: white;
+  clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0);
+}
+
+.light-teaser.buyers-guide-teaser .teaser__card.teaser-grey{
+  background: var(--Gradients-Gradient-4---60, linear-gradient(238deg, rgba(56, 79, 110, 0.60) -11.12%, rgba(91, 91, 91, 0.60) 111.5%));
+  color: white;
+  clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%);
+}
+
+.sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
+  position: absolute;
+  z-index: 1;
+  width: 544px;
+  height: 172px;
+  left: 32px;
+  bottom: 32px;
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card .teaser__actions a::before {
-    content: '';
-    background-image: url('./images/white-slant-arrow.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 52px;
-    height: 52px;
+  content: '';
+  background-image: url('./images/white-slant-arrow.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 52px;
+  height: 52px;
 }
 
 .light-teaser.buyers-guide-teaser .primary__btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4px;
-    text-decoration: underline;
-    text-underline-offset: 2px;
-    padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+  padding: 0;
 
-    font-family: 'Fira Sans';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    order: 2;
-    color: inherit;
-    padding-bottom: 2px;
-    background-color: transparent;
+  font-family: 'Fira Sans';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  order: 2;
+  color: inherit;
+  padding-bottom: 2px;
+  background-color: transparent;
 
-    @media(min-width:1024px) {
-        font-size: 12px;
-        line-height: 16px;
-        text-underline-offset: 1px;
-        padding-bottom: 1px;
-    }
+  @media(min-width:1024px) {
+      font-size: 12px;
+      line-height: 16px;
+      text-underline-offset: 1px;
+      padding-bottom: 1px;
+  }
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark .teaser__actions a::before {
-    background-image: url('./images/white-slant-arrow.svg');
+  background-image: url('./images/white-slant-arrow.svg');
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-light .teaser__actions a::before {
-    background-image: url('./images/arrow.svg');
+  background-image: url('./images/arrow.svg');
 }
 
 .light-teaser.buyers-guide-teaser .teaser__content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 12px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
 }
 
 .light-teaser.buyers-guide-teaser .teaser__info .teaser__title {
-    font-family: "Kepler Std";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 22px;
-    letter-spacing: 0.36px;
-    padding: 16px 0px 16px 0px;
+  font-family: "Kepler Std";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0.36px;
+  padding: 16px 0px 16px 0px;
+
+  /* @media (min-width: 1024) {
+      font-size: 32px;
+  } */
 }
 
-.light-teaser.buyers-guide-teaser .teaser__description {
-    margin-top: 16px;
-    font-size: 12px;
-    line-height: 16px;
-    width: 77%;
-    font-weight: 400;
+.light-teaser.buyers-guide-teaser .teaser__info .teaser__description {
+  margin-top: 16px;
+  font-size: 12px;
+  line-height: 16px;
+  width: 77%;
+  font-weight: 400;
 
 
-    @media(min-width:1024px) {
-        font-size: 18px;
-        line-height: 24px;
-        width: 100%;
-       
-    }
+  @media(min-width:1024px) {
+      font-size: 18px;
+      line-height: 24px;
+      width: 100%;
+     
+  }
 }
+
+.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
+  @media(min-width:1024px) {
+      font-size: 32px;
+  }
+}/*newly added*/
+
+.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description{
+  @media(min-width:1024px) {
+      font-size: 16px;
+      line-height: 24px;
+      width: 67%;
+  }
+}/*newly added */
