--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -371,11 +371,11 @@
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark .teaser__actions a::before {
-  background-image: url('./images/white-slant-arrow.svg');
+  background-image: url('/content/dam/vishal_eds/white-slant-arrow.svg');
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-light .teaser__actions a::before {
-  background-image: url('./images/arrow.svg');
+  background-image: url('/content/dam/vishal_eds/arrow.svg');
 }
 
 .light-teaser.buyers-guide-teaser .teaser__content {
