--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -1,67 +1,3 @@
-p {
-  font-family: "Fira Sans", sans-serif;
-  margin: 0;
-}
-h1,
-h2,
-h3,
-h3,
-h5,
-h6 {
-  margin: 0;
-}
-h2 {
-  font-family: "Kepler Std";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 0.64px;
-}
-.text-color-primary {
-  color: var(--Primary-Main, #18171a);
-}
-.text-color-tertiary {
-  color: var(--Tertiary-White, #fff);
-}
-
-.btn {
-  display: flex;
-  height: 32px;
-  padding: 8px 16px;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  text-decoration: none;
-}
-.btn--primary-solid {
-  background: var(--Primary-Main, #18171a);
-  color: var(--Tertiary-White, #fff);
-  text-align: center;
-  font-family: "Fira Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-.btn--link {
-  font-family: "Fira Sans";
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 13px;
-  text-decoration: none;
-  display: flex;
-  align-items: flex-start;
-  gap: 10.24px;
-  border-bottom: 0.64px solid var(--Primary-Main, #18171a);
-}
-.btn--link-primary {
-  color: var(--Primary-Main, #18171a);
-}
-.tn--link img {
-  height: 16px;
-}
 
 /* -----------------------STYLE.CSS----------------------------------------------------------- */
 .deals-offers-container {
@@ -493,3 +429,70 @@ h2 {
       width: 67%;
   }
 }/*newly added */
+
+
+/*--------------------------------NEXA STYLE-----------------------------------------*/
+p {
+  font-family: "Fira Sans", sans-serif;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h3,
+h5,
+h6 {
+  margin: 0;
+}
+h2 {
+  font-family: "Kepler Std";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0.64px;
+}
+.text-color-primary {
+  color: var(--Primary-Main, #18171a);
+}
+.text-color-tertiary {
+  color: var(--Tertiary-White, #fff);
+}
+
+.btn {
+  display: flex;
+  height: 32px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  text-decoration: none;
+}
+.btn--primary-solid {
+  background: var(--Primary-Main, #18171a);
+  color: var(--Tertiary-White, #fff);
+  text-align: center;
+  font-family: "Fira Sans", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+.btn--link {
+  font-family: "Fira Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 13px;
+  text-decoration: none;
+  display: flex;
+  align-items: flex-start;
+  gap: 10.24px;
+  border-bottom: 0.64px solid var(--Primary-Main, #18171a);
+}
+.btn--link-primary {
+  color: var(--Primary-Main, #18171a);
+}
+.tn--link img {
+  height: 16px;
+}
