--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -429,7 +429,255 @@
       width: 67%;
   }
 }/*newly added */
+/*-------------------------------------------------------------*/
+@import '../teaser/teaser.css';
 
+main .immersive-teaser-container {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+main .immersive-teaser-container>div {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-width: inherit;
+}
+
+.immersive__wrapper {
+    text-align: center;
+    color: white;
+    background-color: #18171A;
+    position: relative;
+}
+
+.immersive__wrapper .banner-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.immersive__wrapper .immersive__content {
+    position: absolute;
+    top: 110px;
+    left: 64px;
+    text-align: left;
+}
+
+.immersive__wrapper .immersive__content h2 {
+    margin: 0;
+    margin-bottom: 48px;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 72px;
+    max-width: 640px;
+    letter-spacing: 1.28px;
+}
+
+.immersive__wrapper .immersive__content p strong {
+    margin: 0;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+}
+
+.immersive__wrapper .immersive__content p {
+    margin-top: 12px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 0;
+    max-width: 280px;
+}
+
+.immersive__wrapper .immersive__content .immersive__action {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 32px;
+}
+
+.immersive__wrapper .immersive__content .immersive__action::after {
+    content: '';
+    display: inline-block;
+    width: 8px;
+    height: 41px;
+    margin-left: -1px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../../icons/right.svg");
+
+}
+
+.immersive__wrapper .immersive__content .immersive__action::before {
+    content: '';
+    display: inline-block;
+    width: 8px;
+    height: 40px;
+    margin-right: -3px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../../icons/left.svg");
+
+}
+
+.immersive__wrapper .immersive__content .immersive__action a {
+    display: flex;
+    padding: 8px 18px 8px 20px;
+    background-color: #ffffff;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border: none;
+    font-size: 18px;
+    color: #18171A;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    border-radius: unset;
+    text-decoration: none;
+}
+
+.immersive__wrapper .immersive__content .immersive__action a::after {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 8px;
+    background-image: url('../../icons/north_east.svg');
+}
+
+.immersive__wrapper .immersive__content .immersive__action .left-svg,
+.immersive__wrapper .immersive__content .immersive__action .right-svg {
+    display: block;
+}
+
+.immersive__wrapper img {
+    width: 100%;
+}
+
+.immersive__wrapper .teaser-wrapper {
+    position: absolute;
+    right: 65px;
+    bottom: 50px;
+    max-width: 52%;
+}
+
+.immersive__wrapper .teaser-wrapper {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 65% 90%, 60% 100%, 0 100%);
+}
+
+.right-seperator::after {
+    content: "";
+    width: 100%;
+    display: block;
+    height: 25px;
+    background-color: #18171A;
+    clip-path: polygon(0 0, 100% 0, 65% 0%, 75% 0%, 72% 100%, 0 100%);
+    position: relative;
+    margin-top: -12px;
+}
+
+.left-seperator::after {
+    content: "";
+    width: 100%;
+    display: block;
+    height: 25px;
+    background-color: #18171A;
+    clip-path: polygon(0 100%, 30% 100%, 32% 0, 100% 0, 100% 100%, 0 100%);
+    position: relative;
+    margin-top: -12px;
+}
+
+@media (max-width: 1023px) {
+    .immersive__wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding-top: 48px;
+    }
+
+    .immersive__wrapper picture {
+        order: 2;
+    }
+
+    .immersive__wrapper .immersive__content {
+        order: 1;
+        position: relative;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 0 20px;
+    }
+
+    .immersive__wrapper .teaser-wrapper {
+        order: 3;
+        left: 0;
+        bottom: 35px;
+        position: relative;
+        margin: 0 20px;
+        max-width: 100%;
+    }
+
+    .immersive__wrapper .immersive__content h2 {
+        font-size: 32px;
+        font-weight: 600;
+        line-height: 40px;
+        letter-spacing: 0.64px;
+        margin: 0;
+        max-width: 300px;
+    }
+
+    .immersive__wrapper .immersive__content p strong {
+        margin-top: 72px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+        display: block;
+    }
+
+    .immersive__wrapper .immersive__content p {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+    }
+
+    .immersive__wrapper .immersive__content .immersive__action {
+        margin-top: 24px;
+    }
+
+    .immersive__wrapper .immersive__content .immersive__action a {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        padding: 8px 12px;
+        margin: 0;
+    }
+
+    .immersive__wrapper .immersive__content .immersive__action::before {
+        margin-right: -3px;
+        height: 41px;
+    }
+
+    .right-seperator::after {
+        height: 16px;
+        order: 4;
+        clip-path: polygon(0 0, 100% 0, 65% 0%, 68% 0%, 65% 100%, 0 100%);
+
+    }
+
+    .left-seperator::after {
+        height: 16px;
+        order: 0;
+    }
+}
 
 /*--------------------------------NEXA STYLE-----------------------------------------*/
 p {
