--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -203,12 +203,23 @@
       position: relative;
   }
 }
-.immersive__wrapper-light .sub-container .left-container img {
+/* MY CHANGES */
+/* .immersive__wrapper-light .sub-container .left-container img {
   position: relative;
   width: 100%;
   max-width: 100%;
   height: auto;
   gap: 20px;
+} */
+
+.immersive__wrapper-light .sub-container .left-container img,
+.immersive__wrapper-light .sub-container .left-container picture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .immersive__wrapper-light .sub-container .left-container .teaser__description{
@@ -324,14 +335,18 @@
   color: white;
   clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%);
 }
-
+/* MY CHANGES*/
 .sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
   position: absolute;
   z-index: 1;
-  width: 544px;
+  /* width: 544px;
   height: 172px;
   left: 32px;
-  bottom: 32px;
+  bottom: 32px; */
+  width: 90%;
+  height: 32%;
+  left: 5%;
+  bottom: 5%;
 }
 
 .light-teaser.buyers-guide-teaser .teaser__card .teaser__actions a::before {
