--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -445,6 +445,12 @@
   }
 }/*newly added */
 
+
+/*MY CHANGES*/
+.light-teaser .buyers-guide-teaser{
+  height: 100%;
+}
+
 .teaser__description p {
   overflow: hidden;  
      text-overflow: ellipsis;     display: -webkit-box;     -webkit-line-clamp: 2;
