--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -350,7 +350,7 @@
 }
 
 /*MY CHANGES*/
-.right-container__card-2 .light-teaser .buyers-guide-teaser{
+.right-container__card-2 .light-teaser .buyers-guide-teaser .teaser__card{
   height: 100%;
 }
 
