--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -312,6 +312,7 @@
   backdrop-filter: blur(20px);
   padding: 16px;
   text-align: left;
+  height: 100%;
 
   @media(min-width: 1024px) {
       padding: 32px 32px 55px;
