--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -410,6 +410,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 12px;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .light-teaser.buyers-guide-teaser .teaser__info .teaser__title {
