--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -410,9 +410,13 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 12px;
+}
+  
+.right-container-subcontainer .light-teaser.buyers-guide-teaser .teaser__content {
   height: 100%;
   justify-content: space-between;
 }
+
 
 .light-teaser.buyers-guide-teaser .teaser__info .teaser__title {
   font-family: "Kepler Std";
