--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -509,8 +509,8 @@ h2 {
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
-}
-.btn--link {
+}*/
+ .btn--link {
   font-family: "Fira Sans", sans-serif;
   font-size: 12px;
   font-style: normal;
@@ -521,10 +521,10 @@ h2 {
   align-items: flex-start;
   gap: 10.24px;
   border-bottom: 0.64px solid var(--Primary-Main, #18171a);
-/* } */
+} 
 .btn--link-primary {
   color: var(--Primary-Main, #18171a);
 }
-/* .btn--link img {
+ .btn--link img {
   height: 16px;
-}  */
+} 
