--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -448,13 +448,27 @@
   }
 }
 
-/* .light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
+.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
+  font-family: "Kepler Std";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0.36px;
+  padding: 16px 0px 16px 0px;
+  
   @media(min-width:1024px) {
       font-size: 32px;
   }
-}newly added */
+}newly added
 
 .light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description{
+  margin-top: 16px;
+  font-size: 12px;
+  line-height: 16px;
+  width: 85%;
+  font-weight: 400;
+  
   @media(min-width:1024px) {
       font-size: 18px;
       line-height: 24px;
