--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -427,7 +427,7 @@
   letter-spacing: 0.36px;
   padding: 16px 0px 16px 0px;
 
-  @media(min-width: 1024) {
+  @media(min-width: 1024px) {
       font-size: 32px;
   }
 }
