--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -418,7 +418,7 @@
 }
 
 
-.light-teaser.buyers-guide-teaser .teaser__info .teaser__title h4 {
+.light-teaser.buyers-guide-teaser .teaser__info .teaser__title {
   font-family: "Kepler Std";
   font-size: 18px;
   font-style: normal;
