--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -1,7 +1,7 @@
-
 /* -----------------------STYLE.CSS----------------------------------------------------------- */
 .deals-offers-container {
-  padding: 0 20px 20px 20px; /*changes*/
+  padding: 0 20px 20px 20px;
+  /*changes*/
 }
 
 .immersive__wrapper-light {
@@ -13,8 +13,9 @@
   padding-top: 48px;
 
   @media(min-width: 1024px) {
-      display: inherit;
-      text-align: center;  /*changes*/
+    display: inherit;
+    text-align: center;
+    /*changes*/
   }
 }
 
@@ -27,39 +28,37 @@
 
 
   @media(min-width: 1024px) {
-      top: 110px;
-      left: 64px;
-      text-align: left;
-  } 
-}
-.heading-content{
-  @media(min-width: 1024px) {
-      display: flex;
-      align-items: flex-end;
-      text-align: left;
+    top: 110px;
+    left: 64px;
+    text-align: left;
   }
-} /*changes*/
+}
 
-.immersive__wrapper-light .immersive__content h2  {
-  font-size: 32px;
+.heading-content {
+  @media(min-width: 1024px) {
+    display: flex;
+    align-items: flex-end;
+    text-align: left;
+  }
+}
+
+/*changes*/
+
+.immersive__wrapper-light .immersive__content .teaser__title {
+  font-family: "Kepler Std";
+  font-size: 18px;
+  font-style: normal;
   font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 0.64px;
-  margin: 0;
-  max-width: 300px;
+  line-height: 22px;
+  letter-spacing: 0.36px;
+  padding: 16px 0px 16px 0px;
 
   @media(min-width: 1024px) {
-      margin: 0;
-      font-size: 64px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 72px;
-      max-width: 640px;
-      letter-spacing: 1.28px;
+    font-size: 32px;
   }
 }
 
-.immersive__wrapper-light .immersive__content p {
+.immersive__wrapper-light .immersive__content .teaser__description {
   color: var(--Primary-Main, #18171A);
   font-family: "Fira Sans";
   font-size: 12px;
@@ -72,13 +71,13 @@
   display: block;
 
   @media(min-width:1024px) {
-      margin-top: 12px;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 24px;
-      margin-bottom: 0;
-      max-width: 280px;        
+    margin-top: 12px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 0;
+    max-width: 280px;
   }
 }
 
@@ -88,7 +87,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  
+
   line-height: 20px;
   margin-top: 16px;
   margin-bottom: 24px;
@@ -96,17 +95,17 @@
   display: block;
 
   @media(min-width:1024px) {
-      margin-top: 12px;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 300;
-      line-height: 24px;
-      margin-bottom: 0;
-      max-width: 280px;        
+    margin-top: 12px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 0;
+    max-width: 280px;
   }
 }
 
-.immersive__wrapper .immersive__content p strong {
+/* .immersive__wrapper .immersive__content p strong {
   margin: 0;
   font-size: 12px;
   font-style: normal;
@@ -115,13 +114,13 @@
   display: block;
 
   @media (min-width:1024px) {
-      margin-top: 72px;
-      font-size: 18px;
-      font-weight: 500;
-      line-height: 20px;
+    margin-top: 72px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
   }
- 
-}
+
+} */
 
 .immersive__wrapper .immersive__content .immersive__action {
   margin-top: 24px;
@@ -143,12 +142,12 @@
   border-radius: unset;
   text-decoration: none;
 
-  @media(min-width: 1024){
-      font-size: 18px;
-      padding: 8px 18px 8px 20px;
-      margin: 0;
+  @media(min-width: 1024) {
+    font-size: 18px;
+    padding: 8px 18px 8px 20px;
+    margin: 0;
   }
-  
+
 }
 
 .immersive__wrapper-light .immersive__action-btn {
@@ -162,12 +161,14 @@
   top: 100%;
 
   @media (min-width:1024px) {
-      position: absolute;
-      right: 0;
-      top: auto;
-      left: auto;
+    position: absolute;
+    right: 0;
+    top: auto;
+    left: auto;
   }
-}    /*changes*/
+}
+
+/*changes*/
 
 .immersive__wrapper-light .immersive__action {
   display: inline-flex;
@@ -175,7 +176,7 @@
   margin-top: 24px;
 
   @media (min-width: 1024) {
-      position: absolute;        
+    position: absolute;
   }
 }
 
@@ -186,23 +187,26 @@
 
 @media (min-width: 1024px) {
   .immersive__wrapper-light .sub-container {
-      order: 2;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 24px;
-      margin-top: 48px;
+    order: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+    margin-top: 48px;
   }
-} /*changes*/
+}
+
+/*changes*/
 
 
 .immersive__wrapper-light .sub-container .left-container {
   display: none;
 
   @media(min-width: 1024px) {
-      display: flex;
-      position: relative;
+    display: flex;
+    position: relative;
   }
 }
+
 /* MY CHANGES */
 /* .immersive__wrapper-light .sub-container .left-container img {
   position: relative;
@@ -222,37 +226,41 @@
   object-fit: cover;
 }
 
-.immersive__wrapper-light .sub-container .left-container .teaser__description{
+.immersive__wrapper-light .sub-container .left-container .teaser__description {
   font-size: 12px;
 }
 
-.immersive__wrapper-light .sub-container .left-container .teaser__action-btn{
+.immersive__wrapper-light .sub-container .left-container .teaser__action-btn {
   position: absolute;
   right: 0;
   bottom: 5%;
-} /*newly added*/
+}
 
-.immersive__wrapper-light .sub-container .left-container .teaser__action-btn a{
-      display: flex;
-      padding: 8px 12px;
-      background-color: #ffffff;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      font-size: 16px;
-      color: #18171A;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px;
-      border-radius: unset;
-      text-decoration: none;
-  
-      @media(min-width: 1024){
-          font-size: 18px;
-          padding: 8px 18px 8px 20px;
-          margin: 0;
-      }
-}/*newly added*/
+/*newly added*/
+
+.immersive__wrapper-light .sub-container .left-container .teaser__action-btn a {
+  display: flex;
+  padding: 8px 12px;
+  background-color: #ffffff;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  font-size: 16px;
+  color: #18171A;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  border-radius: unset;
+  text-decoration: none;
+
+  @media(min-width: 1024) {
+    font-size: 18px;
+    padding: 8px 18px 8px 20px;
+    margin: 0;
+  }
+}
+
+/*newly added*/
 
 .immersive__wrapper-light .sub-container .right-container {
   position: relative;
@@ -265,14 +273,17 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
-  width: 100%; /*check*/
-}/*changes*/
+  width: 100%;
+  /*check*/
+}
 
-.img-over-text{
-  @media (min-width: 1024){
-      padding: 32px 0 0 16px;
+/*changes*/
+
+.img-over-text {
+  @media (min-width: 1024) {
+    padding: 32px 0 0 16px;
   }
-  
+
 }
 
 .immersive__wrapper-light .sub-container .right-container .right-container__content {
@@ -299,16 +310,19 @@
   width: 50%;
   height: 96%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-  z-index: 1; 
+  z-index: 1;
   /* Ensure the gradient is above the image */
-  pointer-events: none; /* Ensure the gradient doesn't block interactions */
-} /*newly added */
+  pointer-events: none;
+  /* Ensure the gradient doesn't block interactions */
+}
 
-.immersive__wrapper-light .sub-container .right-container .right-container__card-1{
+/*newly added */
+
+.immersive__wrapper-light .sub-container .right-container .right-container__card-1 {
   position: relative;
 }
 
-.light-teaser.buyers-guide-teaser{
+.light-teaser.buyers-guide-teaser {
   height: 100%;
 }
 
@@ -319,7 +333,7 @@
   height: 100%;
 
   @media(min-width: 1024px) {
-      padding: 32px 32px 32px;
+    padding: 32px 32px 32px;
   }
 }
 
@@ -335,13 +349,14 @@
   clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 36%, 0 6%, 16% 6%, 25% 0);
 }
 
-.light-teaser.buyers-guide-teaser .teaser__card.teaser-grey{
+.light-teaser.buyers-guide-teaser .teaser__card.teaser-grey {
   background: var(--Gradients-Gradient-4---60, linear-gradient(238deg, rgba(56, 79, 110, 0.60) -11.12%, rgba(91, 91, 91, 0.60) 111.5%));
   color: white;
   clip-path: polygon(54% 12%, 57% 0, 100% 0, 100% 100%, 0 100%, 0 12%);
 }
+
 /* MY CHANGES*/
-.sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
+.sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card {
   position: absolute;
   z-index: 1;
   /* width: 544px;
@@ -355,7 +370,7 @@
 }
 
 /*MY CHANGES*/
-.right-container__card-2 .light-teaser .buyers-guide-teaser .teaser__card{
+.right-container__card-2 .light-teaser .buyers-guide-teaser .teaser__card {
   height: 100%;
 }
 
@@ -389,10 +404,10 @@
   background-color: transparent;
 
   @media(min-width:1024px) {
-      font-size: 16px;
-      line-height: 16px;
-      text-underline-offset: 1px;
-      padding-bottom: 1px;
+    font-size: 16px;
+    line-height: 16px;
+    text-underline-offset: 1px;
+    padding-bottom: 1px;
   }
 }
 
@@ -411,7 +426,7 @@
   align-items: flex-start;
   gap: 12px;
 }
-  
+
 .right-container-subcontainer .light-teaser.buyers-guide-teaser .teaser__content {
   height: 100%;
   justify-content: space-between;
@@ -428,7 +443,7 @@
   padding: 16px 0px 16px 0px;
 
   @media(min-width: 1024px) {
-      font-size: 32px;
+    font-size: 32px;
   }
 }
 
@@ -441,14 +456,14 @@
 
 
   @media(min-width:1024px) {
-      font-size: 18px;
-      line-height: 24px;
-      width: 100%;
-     
+    font-size: 18px;
+    line-height: 24px;
+    width: 100%;
+
   }
 }
 
-/* .light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
+.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title {
   font-family: "Kepler Std";
   font-size: 18px;
   font-style: normal;
@@ -456,25 +471,29 @@
   line-height: 22px;
   letter-spacing: 0.36px;
   padding: 16px 0px 16px 0px;
-  
-  @media(min-width:1024px) {
-      font-size: 32px;
-  }
-}newly added */
 
-.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description{
+  @media(min-width:1024px) {
+    font-size: 32px;
+  }
+}
+
+/* newly added */
+
+.light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description {
   margin-top: 16px;
   font-size: 12px;
   line-height: 16px;
   width: 85%;
   font-weight: 400;
-  
+
   @media(min-width:1024px) {
-      font-size: 18px;
-      line-height: 24px;
-      width: 67%;
+    font-size: 18px;
+    line-height: 24px;
+    width: 67%;
   }
-}/*newly added */
+}
+
+/*newly added */
 
 
 /*--------------------------------NEXA STYLE-----------------------------------------*/
@@ -524,7 +543,7 @@ h2 {
   font-weight: 400;
   line-height: 20px;
 }*/
- .btn--link {
+.btn--link {
   font-family: "Fira Sans", sans-serif;
   font-size: 12px;
   font-style: normal;
@@ -539,10 +558,12 @@ h2 {
   @media (min-width:1024px) {
     font-size: 16px;
   }
-} 
+}
+
 .btn--link-primary {
   color: var(--Primary-Main, #18171a);
 }
- .btn--link img {
+
+.btn--link img {
   height: 16px;
-} 
+}
