--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -37,6 +37,7 @@
       display: flex;
       align-items: flex-end;
       text-align: left;
+      justify-content: space-between;
   }
 } /*changes*/
 
