--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -66,10 +66,12 @@
   font-weight: 600;
   line-height: 22px;
   letter-spacing: 0.36px;
-  padding: 16px 0px 16px 0px;
+  margin: 0;
+  
 
   @media(min-width: 1024px) {
       font-size: 32px;
+      margin: 0;
   }
 }
 
@@ -563,3 +565,7 @@ h2 {
  .btn--link img {
   height: 16px;
 } 
+
+.right-container__card-1{
+
+}
