--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -152,13 +152,14 @@
     align-items: center;
     align-self: stretch;
     border: none;
-    font-size: 16px;
+    font-size: 12px;
     color: #18171A;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
     border-radius: unset;
     text-decoration: none;
+    margin: 0;
   
     @media(min-width: 1024){
         font-size: 18px;
