--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -162,11 +162,11 @@
     border-radius: unset;
     text-decoration: none;
   
-    @media(min-width: 1024){
+    @media(min-width: 1024px){
         font-size: 18px;
         padding: 8px 18px 8px 20px;
         margin: 0;
-        font-size: 18px;
+        
     }
     
   }
