--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -387,7 +387,7 @@
   
   .light-teaser.buyers-guide-teaser .teaser__card .teaser__actions a::before {
     content: '';
-    background-image: url('./images/white-slant-arrow.svg');
+    background-image: url('/content/dam/vishal_eds/white-slant-arrow.svg');
     background-repeat: no-repeat;
     background-size: contain;
     width: 52px;
@@ -422,11 +422,11 @@
   }
   
   .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark .teaser__actions a::before {
-    background-image: url('./images/white-slant-arrow.svg');
+    background-image: url('/content/dam/vishal_eds/white-slant-arrow.svg');
   }
   
   .light-teaser.buyers-guide-teaser .teaser__card.teaser-light .teaser__actions a::before {
-    background-image: url('./images/arrow.svg');
+    background-image: url('/content/dam/vishal_eds/arrow.svg');
   }
   
   .light-teaser.buyers-guide-teaser .teaser__content {
