--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -374,7 +374,7 @@
     left: 32px;
     bottom: 32px; */
     width: 90%;
-    height: auto;
+    height: 38%;
     left: 5%;
     bottom: 5%;
   }
